syntax = "proto3";

package learning;

// =====================
// Core LearningService
// =====================
service LearningService {
  // --- Speech & Audio ---
  rpc SpeechToText (SpeechRequest) returns (SpeechResponse);
  rpc GenerateTts (TtsRequest) returns (TtsResponse);

  // --- Text-based ---
  rpc CheckSpelling (SpellingRequest) returns (SpellingResponse);
  rpc CheckTranslation (CheckTranslationRequest) returns (CheckTranslationResponse);
  rpc ChatWithAI (ChatRequest) returns (ChatResponse);
  rpc Translate (TranslateRequest) returns (TranslateResponse);

  // --- Content Generation ---
  rpc GenerateImage (GenerateImageRequest) returns (GenerateImageResponse);
  rpc GenerateText (GenerateTextRequest) returns (GenerateTextResponse);
  rpc GeneratePassage (GeneratePassageRequest) returns (GeneratePassageResponse);

  // --- Personalized Learning ---
  rpc CreateOrUpdateRoadmap (RoadmapRequest) returns (RoadmapResponse);
  rpc CreateOrUpdateRoadmapDetailed (RoadmapDetailedRequest) returns (RoadmapDetailedResponse);

  // --- System-level / analytics ---
  rpc AnalyzeCourseQuality (CourseQualityRequest) returns (CourseQualityResponse);
  rpc RefundDecision (RefundDecisionRequest) returns (RefundDecisionResponse);
  rpc FindMatch (FindMatchRequest) returns (FindMatchResponse);
  rpc AnalyzeReviewQuality (ReviewQualityRequest) returns (ReviewQualityResponse);
  rpc GenerateLanguageQuiz (QuizGenerationRequest) returns (QuizGenerationResponse);
  rpc EvaluateCourseVersion (EvaluateCourseVersionRequest) returns (EvaluateCourseVersionResponse);
  rpc GradeCertificationTest (GradeTestRequest) returns (GradeTestResponse);

  // --- Speaking & Writing ---
  rpc CheckPronunciation (PronunciationRequest) returns (PronunciationResponse);
  rpc StreamPronunciation (stream PronunciationChunk) returns (stream PronunciationChunkResponse);
  rpc CheckWritingWithImage (WritingImageRequest) returns (WritingImageResponse);
rpc CheckWritingAssessment (WritingAssessmentRequest) returns (WritingAssessmentResponse);
  // --- Data Seeding / Admin Tools ---
  // Transforms raw/random data into valid content with media
  rpc GenerateSeedData (SeedDataRequest) returns (SeedDataResponse);
}

service PersistenceService {
    rpc SaveChatMessage (SaveChatRequest) returns (SaveChatResponse);
}

// =====================
// Messages
// =====================

message SeedDataRequest {
    string raw_question = 1;
    repeated string raw_options = 2;
    string topic = 3;
    string difficulty = 4;
}

message WritingAssessmentRequest {
  string user_text = 1;
  string prompt = 2;
  MediaRef media = 3;
  string media_type = 4; 
  string language = 5;
}

message WritingAssessmentResponse {
  string feedback = 1;
  float score = 2;
  repeated string corrections = 3;
  string error = 4;
}

message SeedDataResponse {
    string fixed_question = 1;
    repeated string fixed_options = 2;
    int32 correct_index = 3;
    string explanation = 4;
    
    // Media content generated by Python
    bytes audio_bytes = 5;      // For the question text
    bytes image_bytes = 6;      // For the context/topic
    string image_prompt_used = 7;
    
    string error = 8;
}

message ReviewQualityRequest {
  string user_id = 1;
  string content_id = 2;   
  string review_text = 3;  
  float rating = 4;        
  string content_type = 5; 
  Metadata metadata = 6;
}

message ReviewQualityResponse {
  bool is_valid = 1;         
  bool is_toxic = 2;
  string sentiment = 3;      
  repeated string topics = 4;  
  string suggested_action = 5; 
  string error = 6;
}

message MediaRef {
  bytes inline_data = 1; 
  string url = 2;        
}

message Metadata {
  map<string, string> fields = 1;
}

message SaveChatRequest {
    string room_id = 1;
    string sender_id = 2;
    string content = 3;
    string message_type = 4;
    string timestamp = 5;
}

message EvaluateCourseVersionRequest {
    string course_title = 1;
    string course_description = 2;
    repeated LessonMetadata lessons = 3;
    string target_audience_level = 4; 
}

message LessonMetadata {
    string lesson_title = 1;
    string lesson_type = 2; 
    int32 duration_seconds = 3;
}

message EvaluateCourseVersionResponse {
    float rating = 1; 
    string review_comment = 2;
    string error = 3;
}

message SaveChatResponse {
    bool success = 1;
    string error = 2;
}

message CallPreferences {
  repeated string interests = 1;
  string gender = 2; 
  string native_language = 3; 
  string learning_language = 4; 
  string age_range = 5; 
  string call_duration = 6; 
}

message MatchCandidate {
  string user_id = 1;
  CallPreferences preferences = 2;
}

message FindMatchRequest {
  string current_user_id = 1;
  CallPreferences current_user_prefs = 2;
  repeated MatchCandidate candidates = 3; 
  Metadata metadata = 4;
}

message FoundPartner {
  string user_id = 1;
  string fullname = 2;
  string avatar_url = 3;
  string country = 4;
  float rating = 5;
  int32 calls_completed = 6;
  string native_language = 7;
  string learning_language = 8;
  repeated string common_interests = 9;
}

message FindMatchResponse {
  bool match_found = 1;
  string partner_user_id = 2; 
  float compatibility_score = 3; 
  string reason = 4; 
  string error = 5;
}

message QuizQuestionProto {
  string id = 1;
  string question_text = 2;         
  repeated string options = 3;      
  int32 correct_answer_index = 4; 
  string explanation = 5;         
  string difficulty = 6;        
  string skill_type = 7;        
  int32 points = 8;               
}

message QuizGenerationRequest {
  string user_id = 1;
  int32 num_questions = 2; 
  string mode = 3;         
  string topic = 4;
  Metadata metadata = 5;
}

message QuizGenerationResponse {
  string quiz_id = 1;
  repeated QuizQuestionProto questions = 2; 
  string error = 3;
}

message TranslateRequest {
  string text = 1;
  string source_language = 2;
  string target_language = 3;
  Metadata metadata = 4;
}

message TranslateResponse {
  string translated_text = 1;
  string source_language_detected = 2;
  float confidence = 3;
  string error = 4;
}

message SpeechRequest {
  MediaRef audio = 1;
  string language = 2;
  Metadata metadata = 3;
}

message SpeechResponse {
  string text = 1;
  string error = 2;
}

message TtsRequest {
  string text = 1;
  string language = 2;
  Metadata metadata = 3;
}

message TtsResponse {
  bytes audio_data = 1;
  string audio_url = 2;
  string error = 3;
}

message PronunciationRequest {
  MediaRef audio = 1;         
  string language = 2;        
  string reference_text = 3;  
}

message PronunciationResponse {
  string feedback = 1;
  float score = 2;            
  string ipa = 3;             
  string error = 4;
}

message PronunciationChunk {
  bytes audio_chunk = 1;
  int32 sequence = 2;
  bool is_final = 3;
  string reference_text = 4; 
}

message PronunciationChunkResponse {
  float score = 1;
  string feedback = 2;
  bool is_final = 3;
  string chunk_type = 4; 
}

message SpellingRequest {
  string text = 1;
  string language = 2;
  Metadata metadata = 3;
}

message SpellingResponse {
  repeated string corrections = 1;
  string explanation = 2;
  string error = 3;
}

message CheckTranslationRequest {
  string reference_text = 1;
  string translated_text = 2;
  string target_language = 3;
  Metadata metadata = 4;
}

message CheckTranslationResponse {
  string feedback = 1;
  float score = 2;
  string error = 3;
}

message WritingImageRequest {
  string user_text = 1;       
  string prompt = 2;          
  MediaRef image = 3;         
  string language = 4;
}

message WritingImageResponse {
  string feedback = 1;
  float score = 2;
  repeated string suggestions = 3;
  string error = 4;
}

message ChatMessage {
  string role = 1;
  string content = 2;
}

message ChatRequest {
  string user_id = 1;
  string message = 2;
  repeated ChatMessage history = 3;
  Metadata metadata = 4;
}

message ChatResponse {
  string response = 1;
  repeated string suggestions = 2;
  string emotion = 3;
  string error = 4;
}

message GenerateImageRequest {
  string user_id = 1;
  string prompt = 2;
  string language = 3;
  Metadata metadata = 4;
}

message GenerateImageResponse {
  repeated string image_urls = 1;
  string model_used = 2;
  string error = 3;
}

message GenerateTextRequest {
  string user_id = 1;
  string prompt = 2;
  string language = 3;
  Metadata metadata = 4;
}

message GenerateTextResponse {
  string text = 1;
  repeated string suggestions = 2;
  string error = 3;
}

message GeneratePassageRequest {
  string user_id = 1;
  string language = 2;
  string topic = 3;
  Metadata metadata = 4;
}

message GeneratePassageResponse {
  string passage = 1;
  string difficulty = 2;
  string error = 3;
}

message RoadmapItemProto {
  string item_id = 1;
  string title = 2;
  string description = 3;
  string type = 4;
  int32 level = 5;
  int32 estimated_time = 6;
  int32 order_index = 7;
  string category = 8;
  string difficulty = 9;
  int32 exp_reward = 10;
  string content_id = 11;
}

message RoadmapRequest {
  string user_id = 1;
  string roadmap_id = 2;
  string title = 3;
  string description = 4;
  string language = 5;
}

message RoadmapResponse {
  string roadmap_id = 1;
  string title = 2;
  string description = 3;
  string language = 4;
  string error = 5;
}

message RoadmapDetailedRequest {
  string user_id = 1;
  string roadmap_id = 2;
  string language = 3;
  string prompt = 4;
  bool as_user_specific = 5;
  Metadata metadata = 6;
}

message RoadmapDetailedResponse {
  string roadmap_id = 1;
  string title = 2;
  string description = 3;
  string language = 4;
  repeated RoadmapItemProto items = 5;
  repeated RoadmapResourceProto resources = 6;
  repeated RoadmapGuidanceProto guidances = 7;
  repeated RoadmapMilestoneProto milestones = 8;
  string error = 9;
}

message CourseQualityRequest {
  string course_id = 1;
  repeated string lesson_ids = 2;
  Metadata metadata = 3;
}

message CourseQualityResponse {
  float quality_score = 1;
  repeated string warnings = 2;
  string verdict = 3;
  string error = 4;
}

message RefundDecisionRequest {
  string transaction_id = 1;
  string user_id = 2;
  string course_id = 3;
  string reason_text = 4;
  Metadata metadata = 5;
}

message RefundDecisionResponse {
  string decision = 1;
  string label = 2;
  float confidence = 3;
  repeated string explanations = 4;
  string error = 5;
}

message RoadmapResourceProto {
  string resource_id = 1;
  string item_id = 2;
  string type = 3;
  string title = 4;
  string description = 5;
  string url = 6;
  string content_id = 7;
  int32 duration = 8;
}

message RoadmapGuidanceProto {
  string guidance_id = 1;
  string item_id = 2;
  int32 stage = 3;
  string title = 4;
  string description = 5;
  repeated string tips = 6;
  int32 estimated_time = 7;
  int32 order_index = 8;
}

message RoadmapMilestoneProto {
  string milestone_id = 1;
  string title = 2;
  string description = 3;
  int32 level = 4;
  repeated string requirements = 5;
  repeated string rewards = 6;
  int32 order_index = 7;
}

message GradeTestRequest {
    string session_id = 1;
    string test_type = 2; 
    string language = 3;
    repeated TestAnswerProto answers = 4;
}

message TestAnswerProto {
    string question_id = 1;
    string type = 2; 
    string text_content = 3;
    bytes audio_content = 4;
    string reference_text = 5; 
}

message GradeTestResponse {
    string session_id = 1;
    float final_score = 2;
    string proficiency_level = 3;
    repeated GradedAnswerProto graded_answers = 4;
    string error = 5;
}

message GradedAnswerProto {
    string question_id = 1;
    bool is_correct = 2;
    float score = 3;
    string feedback = 4;
    string explanation = 5;
}